--- a/Wednesday_Blank_Thieves.ipynb
+++ b/Wednesday_Blank_Thieves.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,9 +1286,9 @@
     }
    ],
    "source": [
-    "import createdmodule\n",
+    "# import createdmodule\n",
     "\n",
-    "createdmodule.add_nums(5,10)"
+    "# createdmodule.add_nums(5,10)"
    ]
   },
   {
@@ -1315,25 +1315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "steak\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'title'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m shopping_cart \u001b[39m=\u001b[39m {}\n\u001b[0;32m      3\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mTrue\u001b[39;00m:\n\u001b[1;32m----> 4\u001b[0m     \u001b[39mprint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39mEnter items to be added in shopping list: (enter \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39ma\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m to add, \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39md\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m to delete, \u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mq\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m to quit\u001b[39;49m\u001b[39m'\u001b[39;49m))\u001b[39m.\u001b[39;49mtitle()\n\u001b[0;32m      5\u001b[0m     \u001b[39mif\u001b[39;00m choice \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mq\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m      6\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'title'"
+      "\n",
+      "Your Shopping Cart:\n",
+      "A5 Wagyu Steak: 13\n",
+      "Salmon: 12\n",
+      "Chicken: 11\n",
+      "\n",
+      "Items You Now Own:\n",
+      "A5 Wagyu Steak: 13\n",
+      "Salmon: 12\n",
+      "Chicken: 11\n"
      ]
     }
    ],
@@ -1341,20 +1339,30 @@
     "shopping_cart = {}\n",
     "\n",
     "while True:\n",
-    "    print('Enter items to be added in shopping list: (enter \"a\" to add, \"d\" to delete, \"q\" to quit')\n",
-    "    if choice == 'q':\n",
+    "    user_choice = input(\"Please enter your choice (1. Add item), (2. Delete item), (3. View shopping cart), (4. Quit): \")\n",
+    "\n",
+    "    if user_choice == '1':\n",
+    "        item_name = input(\"What do you want to add to your shopping car?: \")\n",
+    "        item_quantity = input(\"Enter the quantity of the item you want to add.: \")\n",
+    "        shopping_cart[item_name] = item_quantity\n",
+    "    elif user_choice == '2':\n",
+    "        item_name = input(\"What do you want to delete from your shopping cart?: \")\n",
+    "        if item_name in shopping_cart:\n",
+    "            del shopping_cart[item_name]\n",
+    "        else:\n",
+    "            print(f\"{item_name} not found in the your shopping cart.\")\n",
+    "    elif user_choice == '3':\n",
+    "        print(\"\\nYour Shopping Cart:\")\n",
+    "        for item, quantity in shopping_cart.items():\n",
+    "            print(f\"{item}: {quantity}\")\n",
+    "    elif user_choice == '4':\n",
     "        break\n",
-    "    choice = input().lower()\n",
-    "    if choice == 'a':\n",
-    "        print(\"Enter item name:\")\n",
-    "        item = input().lower()\n",
-    "    if choice == 'd':\n",
-    "        print(\"Enter item name:\")\n",
-    "        item = input().lower()\n",
-    "        if item in shopping_cart:\n",
-    "            del shopping_cart[item]\n",
-    "            print(\"Item deleted.\")\n",
-    "    print('Shopping List: ')"
+    "    else:\n",
+    "        print(\"Invalid choice. Try again.\")\n",
+    "\n",
+    "print(\"\\nItems You Now Own:\")\n",
+    "for item, quantity in shopping_cart.items():\n",
+    "    print(f\"{item}: {quantity}\")"
    ]
   },
   {
@@ -1373,32 +1381,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'calculations' has no attribute 'square_foot'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[37], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m length \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter the length of the house: \u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m      4\u001b[0m width \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter the width of the house: \u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[1;32m----> 5\u001b[0m area \u001b[39m=\u001b[39m calculations\u001b[39m.\u001b[39;49msquare_foot(length, width)\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mThe square footage of the house is \u001b[39m\u001b[39m{\u001b[39;00marea\u001b[39m}\u001b[39;00m\u001b[39m square feet.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      8\u001b[0m radius \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(\u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnter the radius of the circle: \u001b[39m\u001b[39m\"\u001b[39m))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'calculations' has no attribute 'square_foot'"
-     ]
+     "data": {
+      "text/plain": [
+       "772.44"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import calculations\n",
     "\n",
-    "length = int(input(\"Enter the length of the house: \"))\n",
-    "width = int(input(\"Enter the width of the house: \"))\n",
-    "area = calculations.square_foot(length, width)\n",
-    "print(f\"The square footage of the house is {area} square feet.\")\n",
-    "\n",
-    "radius = int(input(\"Enter the radius of the circle: \"))\n",
-    "circumference = calculations.circumference(radius)\n",
-    "print(f\"The circumference of the circle is {circumference}.\")\n"
+    "calculations.square_foot(1000,1000)\n",
+    "calculations.circumference(123)\n"
    ]
   }
  ],
