--- a/Wednesday_Blank_Thieves.ipynb
+++ b/Wednesday_Blank_Thieves.ipynb
@@ -1342,7 +1342,7 @@
     "    user_choice = input(\"Please enter your choice (1. Add item), (2. Delete item), (3. View shopping cart), (4. Quit): \")\n",
     "\n",
     "    if user_choice == '1':\n",
-    "        item_name = input(\"What do you want to add to your shopping car?: \")\n",
+    "        item_name = input(\"What do you want to add to your shopping cart?: \")\n",
     "        item_quantity = input(\"Enter the quantity of the item you want to add.: \")\n",
     "        shopping_cart[item_name] = item_quantity\n",
     "    elif user_choice == '2':\n",
